--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "scriptname": "cmd"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
